kubernetes_deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simplephp-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: simplephp-app
    spec:
      containers:
      - name: php-app
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/cp-team/cp-poornima-dev-module:simplephp-app-1.0
        ports:
        - containerPort: 4568
