kubernetes_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpapp-service
  labels:
    app: phpapp-service
spec:
  ports:
  - port: 4568
    name: http
    targetPort: 4568
  selector:
    app: simplephp-app
